--- a/css/positioning/style.css
+++ b/css/positioning/style.css
@@ -1,11 +1,21 @@
-.octopus{
-
+#octopus{
+	position: absolute;
+	top: 100px;
+	left: 50%;
+	transform: translate(-50%, 0 );
+	margin: 0 auto;
 }
 
-.hat{
-
+#hat{
+	position: relative;
+	top: 25px;
+	left: 360px;
+	z-index: 3;
 }
 
-.glasses{
-	
+#glasses{
+	position: relative;
+	top: 85px;
+	left: 570px;
+	z-index: 3;
 }
