--- a/web_dev/sinatra_templating/views/home.erb
+++ b/web_dev/sinatra_templating/views/home.erb
@@ -1,16 +1,20 @@
+
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Student Management System</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1>Student Management System</h1>
-  <p>Welcome to the student management system.</p>
-  <p>Click <a href="students/new">here</a> to create a new student.</p>
-  <ul>
-    <% @students.each do |student| %>
-      <li><%= student['name'] %>, <%= student['age'] %></li>
-    <% end %>
-  </ul>
-</body>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Student Management System</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
+  <body>
+    <h1>Student Managament System</h1>
+    <p>Welcome to the student management system.</p>
+    <p>Click <a href="/students/new">here</a> to create to a new student.</p>
+    <ul>
+      <% @students.each do |student| %>
+        <li><%= student['name'] %>, <%= student['age']%>, <%= student['campus']%></li>
+      <% end %>
+    </ul>
+  </body>
 </html>
+
