--- a/web_dev/sinatra_templating/views/new_student.erb
+++ b/web_dev/sinatra_templating/views/new_student.erb
@@ -1,14 +1,18 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Create a New Student</title>
-</head>
-<body>
-  <form action="/students" method="POST">
-    <input type="text" name="name" placeholder="Name">
-    <input type="text" name="campus" placeholder="Campus">
-    <input type="text" name="age" placeholder="Age">
-    <button type="submit">Save</button>
-  </form>
-</body>
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Create a New Student</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+	<body>
+		<form action="/students" method="POST">
+			<input type="text" name="name" placeholder="Name">
+			<input type="text" name="campus" placeholder="Campus">
+			<input type="text" name="age" placeholder="Age">
+			<button type="submit">Save</button>
+		</form>
+	</body>
 </html>
+
